--- a/style.css
+++ b/style.css
@@ -1,9 +1,9 @@
-@import url('https://fonts.googleapis.com/css2?family=Kumbh+Sans:wght@400;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Raleway:ital,wght@0,100;0,200;0,300;0,400;1,100;1,200;1,300;1,400&display=swap');
 
 body {
    background: #f5f5f5;
    margin: 0;
+   font-family: 'Raleway', sans-serif;
 }
 
 header {
@@ -31,7 +31,6 @@ header {
     border-radius: 20px;
     left: calc(50% - 393px/2 + 104px);
     top: 5px;
-    font-family: 'Raleway', sans-serif;
     font-weight: 400;
     font-size: 14px;
 }
@@ -44,7 +43,6 @@ header {
     top: 32px;
     border: 1px solid #2A7AE4;
     box-sizing: border-box;
-    font-family: 'Raleway', sans-serif;
     color: #2A7AE4;
 }
 
@@ -58,7 +56,7 @@ section {
 
 .textoBanner {
     color: white;
-    font-family: 'Kumbh Sans', sans-serif;
+    font-weight: 700;
     font-style: normal;
     padding-left: 152px;
     padding-top: 150px;
@@ -85,22 +83,99 @@ h1 {
     top: 119px;
     background: #2a7ae4;
     color: white;
-    font-family: 'Raleway', sans-serif;
 }
 
 main {
-    margin: auto;
+    font-weight: 700;
+    width: 80%;
+    margin: 0 auto;
 }
 
-main>ul {
-    list-style: none;
+.subTitulo {
     display: flex;
+    flex-direction: row;
+    align-items: center;
+    align-content: space-between;
+    justify-content: space-between;
 }
 
-main>ul>li {
-    padding-right: 16px;
+ul {
+    margin: 0;
+    padding: 0;
+    border: 0;
+    display: flex;
+    flex-direction: row;
+    align-content: center;
+    justify-content: space-between;
+    align-items: center;
 }
 
-h2 {
-    padding-left: 40px;
+li {
+    list-style: none;
+    padding-bottom: 60px;  
+}
+
+h2>a {
+    color: #2A7AE4;
+}
+
+.container {
+    padding: 64px 152px 64px 152px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-evenly;
+    align-items: flex-start;
+}
+
+.listaLink {
+    display: flex;
+    flex-direction: column;
+}
+
+.listaFale {
+    display: flex;
+    flex-direction: column;
+}
+
+.listaFale>p {
+    margin: 0;
+    font-weight: 700;
+}
+
+footer {
+    background-color: #EAF2FD;
+    width: 100%;
+    height: 368px;
+}
+
+.footerNome {
+    width: 560px;
+    height: 56px;
+}
+
+.footerMsm {
+    width: 560px;
+    height: 82px;
+}
+
+.footerBtn {
+    width: 165px;
+    height: 51px;
+    background: #2A7AE4;
+    color: white;
+}
+
+.rodape {
+    height: 102px;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: nowrap;
+    align-content: flex-start;
+    align-items: center;
+    justify-content: center;
+    text-align: center;
+}
+
+a {
+    text-decoration: none;
 }
