--- a/style.css
+++ b/style.css
@@ -17,26 +17,19 @@ header {
 }
 
 .logo {
-    position: static;
     width: 176px;
     height: 50px;
-    left: 0px;
-    top: 0px;
 }
 
 .pesquisa {
-    position: static;
     width: 393px;
     height: 40px;
     border-radius: 20px;
-    left: calc(50% - 393px/2 + 104px);
-    top: 5px;
     font-weight: 400;
     font-size: 14px;
 }
 
 .botaoLogin {
-    position: static;
     width: 182px;
     height: 51px;
     left: 954px;
@@ -50,8 +43,8 @@ section {
     width: 100%;
     height: 352px;
     background:url(img/banner-image.png);
-    background-size: 100%;
     background-repeat: no-repeat;
+    background-size: cover;
 }
 
 .textoBanner {
@@ -132,6 +125,10 @@ h2>a {
     flex-direction: column;
 }
 
+.listaLink>a {
+    padding-bottom: 20px;
+}
+
 .listaFale {
     display: flex;
     flex-direction: column;
@@ -140,6 +137,11 @@ h2>a {
 .listaFale>p {
     margin: 0;
     font-weight: 700;
+    padding-bottom: 10px;
+}
+
+.listaFale>input {
+    margin-bottom: 10px;
 }
 
 footer {
@@ -150,12 +152,12 @@ footer {
 
 .footerNome {
     width: 560px;
-    height: 56px;
+    height: 52px;
 }
 
 .footerMsm {
     width: 560px;
-    height: 82px;
+    height: 75px;
 }
 
 .footerBtn {
@@ -178,4 +180,91 @@ footer {
 
 a {
     text-decoration: none;
+}
+
+@media screen and (max-width: 768px) {
+    .logo {
+        width: 100px;
+        height: 28px;
+    }
+    
+    .pesquisa {
+        width: 277px;
+        height: 40px;
+    }
+
+    .botaoLogin {
+        width: 166px;
+        height: 40px;
+    }
+
+    section {
+        background-position: center;
+    }
+
+    .textoBanner {
+        padding-left: 32px;
+        padding-top: 130px;
+    }
+
+    main {
+        width: 90%;
+    }
+
+    ul>li>img {
+        width: 164px;
+    }
+
+    .menuHide {
+        display: none;
+    }
+
+    .container {
+        padding: 32px;
+    }
+    
+    .listaLink {
+    }
+    
+    .listaLink>a {
+        padding-bottom: 20px;
+    }
+    
+    .listaFale {
+        display: flex;
+        flex-direction: column;
+    }
+    
+    .listaFale>p {
+        margin: 0;
+        font-weight: 700;
+        padding-bottom: 10px;
+    }
+    
+    .listaFale>input {
+        margin-bottom: 10px;
+    }
+    
+    footer {
+        background-color: #EAF2FD;
+        width: 100%;
+        height: 368px;
+    }
+    
+    .footerNome {
+        width: 560px;
+        height: 52px;
+    }
+    
+    .footerMsm {
+        width: 560px;
+        height: 75px;
+    }
+    
+    .footerBtn {
+        width: 165px;
+        height: 51px;
+        background: #2A7AE4;
+        color: white;
+    }
 }
